# python-backend-template

./: .dockerignore  .env.template  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 2023_10_04_1321-c8dc015627d2_create_user_table.py  2023_10_24_0635-22904cbd0c78_create_user_table.py  2023_11_18_1600-115eda2be0df_create_user_table_using_fastapi_users.py  2023_11_19_0833-041fc306f6ba_use_database_strategy_when_storing_.py  2023_11_20_0553-27eba3195feb_oauth_integration.py
app/: db.py  main.py  settings.py
app/api/: docs.py  routers.py  user.py
app/core/: database.py  errors.py  middlewares.py
app/daos/: user.py
app/models/: __init__.py  user.py
app/routers/: user.py
app/schemas/: user.py
app/services/: user.py  utils.py
app/utils/: logger.py  settings.py
development/usage/: index.html
docs/: index.md
docs/development/: usage.md
search/: search_index.json
tests/: test_app.py
