[tool.poetry]
authors = ["Frank Dai <yongjindai09@gmail.com>"]
description = ""
license = "MIT"
name = "python-backend-template"
packages = [{include = "app"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
asgi-correlation-id = "^4.3.0"
asyncpg = "^0.29.0"
fastapi = "^0.109.0"
fastapi-pagination = "^0.12.14" # TODO add support for pagination
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
opentelemetry-api = "^1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"
opentelemetry-instrumentation-aiohttp-client = "^0.43b0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-sdk = "^1.22.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}# needed?
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python = "^3.12"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}# needed?
python-multipart = "^0.0.6" # needed?
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
structlog = "^24.1.0"
tenacity = "^8.2.3"
uvicorn = "^0.27.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
commitizen = "^3.13.0"
coverage = "^7.4.1"
mkdocs-material = "^9.5.6"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
pytest-bdd = "^7.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
rich = "^13.7.0"
ruff = "^0.1.15"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[[tool.poetry.source]]
name = "tsinghua"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.poetry.source]]
name = "aliyun"
priority = "primary"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.coverage.paths]
source = ["app", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["app", "tests"]

[tool.coverage.report]
fail_under = 10
show_missing = true

[tool.mypy]
namespace_packages = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
# strict = true
exclude = ["alembic/**"]
warn_unreachable = true

[tool.black]
line-length = 120

[tool.ruff]
extend-exclude = [
  "alembic",
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
line-length = 120
select = [
  # "D", # pydocstyle
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "S", # flake8-bandit
  "T20", # flake8-print
  "PT", # flake8-pytest-style
  "N", # pep8-naming
  "ASYNC", # flake8-async
  "Q", # flake8-quotes
  "PTH", # flake8-pathlib
]

[tool.ruff.isort]
section-order = ["future", "fastapi", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.isort.sections]
fastapi = ["fastapi"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101", # asserts allowed in tests
  "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
  "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
